# gobject-media-example

./: README.md  gex-cd.c  gex-cd.h  gex-cleanable.c  gex-cleanable.h  gex-media.c  gex-media.h  main.c  meson.build
